/* Copyright (C) 2014-2015 Alexander Shishenko <GamePad64@gmail.com>
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Lesser General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
syntax = "proto2";
import "EncFileMap.proto";
package librevault;

message Meta {
	// These I'd mark as required
	optional bytes encpath = 1;	// AES-256-CBC encrypted normalized path relative to sync directory path. It cannot contain dot (".") and dot-dot ("..") elements. Directory path MUST NOT end with trailing slash ("/"). Separators MUST be slashes ("/").
	optional bytes encpath_iv = 2;	// IV for AES-256-CBC encrtypted encpath.

	enum FileType {
		FILE = 0;
		DIRECTORY = 1;
		SYMLINK = 2;

		DELETED = 255;
	}
	optional FileType type = 3 [default = FILE];
	optional int64 mtime = 4;

	// These are optional (I mean, conditional)
	optional cryptodiff.internals.EncFileMap_s filemap = 5;
	optional bytes symlink_to = 6;

	optional uint32 windows_attrib = 16;
}
