/* Copyright (C) 2014-2015 Alexander Shishenko <GamePad64@gmail.com>
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
syntax = "proto3";
package librevault.serialization;

message Meta_s {
	// Necessary data
	bytes path_id = 1;
	bytes encrypted_path = 2;	// AES-256-CBC encrypted normalized path relative to sync directory path. It cannot contain dot (".") and dot-dot ("..") elements. Directory path MUST NOT end with trailing slash ("/"). Separators MUST be slashes ("/").
	bytes encrypted_path_iv = 3;	// IV for AES-256-CBC encrypted encpath.
	uint32 meta_type = 4;
	int64 revision = 5;

	// Other types of metadata
	int64 mtime = 6;
	/// Symlinks only
	bytes symlink_encrypted_path = 7;
	bytes symlink_encrypted_path_iv = 8;

	/// Windows-specific
	uint32 windows_attrib = 9;
	/// Unix-specific
	uint32 mode = 10;
    uint32 uid = 11;
    uint32 gid = 12;

	// Filemap-derived data
	uint32 max_blocksize = 16;
	uint32 min_blocksize = 17;
	uint32 strong_hash_type = 18;
	uint32 weak_hash_type = 19;

	message Block_s {
		bytes encrypted_data_hash = 1;
		bytes encrypted_rsync_hashes = 2;
		uint32 blocksize = 3;
		bytes iv = 4;
	}
	repeated Block_s blocks = 20;
}
